--- a/scss/_destack.scss
+++ b/scss/_destack.scss
@@ -9,7 +9,7 @@
     }
     h2 {
         float: left;
-        font-size: $font-small;
+        font-size: $font-medium;
         margin-left: $space-default;
         margin-top: $mt;
     }
