--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ section {
 .container {
   margin: 0 auto;
   max-width: 1200px;
+  min-width: 320px;
 }
 
 img {
@@ -37,45 +38,47 @@ img {
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1.2rem;
   color: #444;
 }
 
 p {
-  color: #ff5;
+  color: rgb(253, 204, 253);
   font-size: 1.5rem;
   margin-bottom: 1.5rem;
   text-align: left;
 }
 
 h1 {
-  color: #ff5;
+  color: rgb(253, 204, 253);
   font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 3rem;
   margin-top: 3rem;
 }
 
 h2 {
-  color: #999;
+  color: rgb(153, 194, 249);
   font-size: 2.2rem;
 }
 
 h3 {
-  color: #f00;
+  color: rgb(24, 222, 253);
   font-size: 1.5rem;
 }
 
 header,
 footer {
-  background-color: #ddd;
+  background: #360033; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #0b8793, #360033); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #0b8793, #360033); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .blocks {
   padding: 3rem 0;
 }
 .blocks h2 {
-  color: #ff5;
+  color: rgb(253, 204, 253);
 }
 .blocks ul {
   list-style-type: none;
@@ -87,19 +90,19 @@ footer {
   width: 100%;
 }
 .blocks li {
-  color: #999;
+  color: rgb(153, 194, 249);
   display: block;
   margin: 1.5rem auto;
-  width: 30%;
+  width: 100%;
 }
 .blocks li .img-container {
   display: block;
-  height: 200px;
+  height: 180px;
   overflow: hidden;
   width: 100%;
 }
 .blocks li a {
-  background-color: #ff5;
+  background-color: rgb(253, 204, 253);
   border-radius: 5px;
   color: white;
   display: block;
@@ -111,28 +114,28 @@ footer {
 }
 
 .cars h2 {
-  color: #999;
+  color: rgb(153, 194, 249);
 }
 .cars li {
-  color: #222;
+  color: rgb(2, 49, 103);
 }
 .cars li a {
   background-color: #444;
 }
 
 .destack {
-  background-color: #222;
+  background-color: rgb(2, 49, 103);
   padding: 1.5rem;
 }
 .destack h1 {
-  color: #f00;
+  color: rgb(24, 222, 253);
   float: left;
   font-size: 3rem;
   margin-top: 0;
 }
 .destack h2 {
   float: left;
-  font-size: 1.2rem;
+  font-size: 2.2rem;
   margin-left: 1.5rem;
   margin-top: 1.5rem;
 }
@@ -143,9 +146,32 @@ footer {
 }
 .destack p {
   font-size: 1.5rem;
-  color: #ff5;
+  color: rgb(253, 204, 253);
   padding: 2rem 0;
   width: 100%;
+}
+
+.logo {
+  width: 300px;
+  height: auto;
+  border-radius: 25px;
+}
+
+video {
+  width: 300px;
+  height: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 576px) {
+  ul {
+    display: flex;
+    align-content: center !important;
+    flex-direction: column !important;
+    height: auto !important;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
