--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -29,6 +29,7 @@ section {
 .container {
     margin: 0 auto;
     max-width: 1200px;
+    min-width: 320px;
 }
 
 img {
@@ -68,5 +69,8 @@ h3 {
 
 header,
 footer {
-    background-color: $bg-color
+    background: #360033;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #0b8793, #360033);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #0b8793, #360033); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
