--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,12 +1,12 @@
 $align: left;
-$bg-color: #ddd;
-$color-01: #ff5;
-$color-02: #999;
-$color-03: #f00;
-$color-04: #222;
+$bg-color: rgb(5, 4, 4);
+$color-01: rgb(253, 204, 253);
+$color-02: rgb(153, 194, 249);
+$color-03: rgb(24, 222, 253);
+$color-04: rgb(2, 49, 103);
 $color-default: #444;
 $font-big: 3rem; 
-$font-family-default: Arial, Helvetica, sans-serif;
+$font-family-default:'Montserrat', sans-serif;
 $font-medium: 2.2rem;
 $font-normal: 1.5rem;
 $font-small: 1.2rem;
