--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -4,7 +4,7 @@ $color-01: rgb(253, 204, 253);
 $color-02: rgb(153, 194, 249);
 $color-03: rgb(24, 222, 253);
 $color-04: rgb(2, 49, 103);
-$color-default: #444;
+$color-default: rgb(209, 2, 246);
 $font-big: 3rem; 
 $font-family-default:'Montserrat', sans-serif;
 $font-medium: 2.2rem;
